--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/91868/Downloads/selenium-server-4.29.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/91868/Downloads/testng-7.10.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
